refactor: Remove logging statements from searchByKeyword method in TeamSearchService