@@ -6,24 +6,19 @@ import co.elastic.clients.elasticsearch._types.query_dsl.Query;
 import com.blockout.search.models.docs.TeamSearchDoc;
 
 import lombok.RequiredArgsConstructor;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
 
 @Service
 @RequiredArgsConstructor
 public class TeamSearchService {
 
-    private static final Logger logger = LoggerFactory.getLogger(TeamSearchService.class);
     private final ElasticsearchClient elasticsearchClient;
 
     public List<TeamSearchDoc> searchByKeyword(String keyword) {
         try {
-            logger.info("🔍 Searching for teams with keyword: {}", keyword);
-
-            // On booste le champ simplifié si besoin
             Query query = Query.of(q -> q
                 .bool(b -> b
                     .should(s -> s.match(mq -> mq
@@ -50,8 +45,7 @@ public class TeamSearchService {
                     .toList();
 
         } catch (Exception e) {
-            logger.error("❌ Error during keyword search", e);
-            return List.of();
+            return Collections.emptyList();
         }
     }
 }
